# relm-localisation

./: Cargo.toml  LICENSE
locales/en/: accessibility.ftl  common.ftl  demo.ftl  jellyfin.ftl  playback-info.ftl  playback.ftl  subtitle-styles.ftl
locales/zh-CN/: accessibility.ftl  common.ftl  demo.ftl  jellyfin.ftl  playback-info.ftl  playback.ftl  subtitle-styles.ftl
src/: bundle.rs  lib.rs
