[package]
name = "relm-localisation"
version = "0.1.0"
edition = "2021"
description = "Cross-platform localisation crate for Relm Media"
license = "MIT"
repository = "https://github.com/matt953/relm-localisation"

[dependencies]
fluent = "0.16"
fluent-bundle = "0.15"
fluent-syntax = "0.11"
intl-memoizer = "0.5"
unic-langid = "0.9"
